feat: opinion/比特币的目标价.md

--- a/opinion/比特币的目标价.md
+++ b/opinion/比特币的目标价.md
@@ -1,7 +1,7 @@
 
 
-对于比特币的目标价，JP Morgan在最近提升了自己的目标价到十四万一个。然后这个大哥觉得JP Morgan太保守了，比特币具有黄金所有的金融属性和货币属性，而且还能进行实时交易，所以他觉得未来价格应该能够达到一百万美金一个，现在比特币大概在四万美金一个的价格徘回，大家可以自行感受一下。二零二零年真的是美国股市当中最神奇的一年，起码是在我本人短暂的炒股生涯中见过的最有戏剧性的一年。三月份断崖式的大跌，到之后的一路走高再创新。哦与此同时呢，新冠肺炎的新增数量和死亡数量每天都还在不停的攀升。如果单看这张图的话，你可能很难区分出到底看的是股市还是新冠的走势图。前几天在网上看到有人调侃说，现在看新闻的话以为美国要灭国了，看股市又觉得到处一片欣欣向荣，完全是两种不同的画风。造成这个巨大反差的一大原因，应该就是今年美联储为了救市给出的无限量化宽松大法，俗称隐潜大法，印钱大把一出，所有的资产，包括股市、债市、房市都跟着水涨船高。当然了，也包括我们今天要聊的另外一个加引号的新型资产，比特币。视频开始之前呢，快速的介绍一下九。九的北美韭菜读书会。在接下来一年的时间内，九就会带大家读完一百本不同领域的精选好书，每一本我都会进行深度的拆解、分析，梳理书中的核心内容。在。不到二十分钟的音频中呈现出来，从而能够帮助到大家利用碎片化的时间去拓展视野、提升自己。每周更新两次，想要加入的朋友们现在也可以扫一下屏幕当中的二维码，或者使用视频描述栏当中链接就可以了。OK，回到正题，我在十月八号的时候出了一期视频，是关于二克方舟基金对于比特币的估值模型被骂得很惨。说我一个讲财经、讲股票基本面的博主，怎么开始鼓吹大家买比特币了？可以看到当时比特币的价格一个是一万零九百，到现在三个月的时间足足翻了三倍，特斯拉还没有这些药物，看到这个回报率也应该都要通通靠边站了。毫无疑问，属于比特币的新一轮大牛市已经开启了。价格在到达了之前二零一七年的历史高位，一万九千美金一个的时候，稍微遇到了一些阻力，然后就直接冲上去了。我自己是在比特币突破前高之后，各个账号里都少量加仓。当然了，我肯定也是预测不到它的价格能上涨的这么快，不然的话我应该是o。in。而不只是少量加仓了。今天的视频主要是想继续聊一下我最近对比特币认知上的一些改变，也听一听我最喜欢的方舟基金牛股神candy，word对比特币的最新看法。首先说一下，我作为一个关注股票基本面普及、长线价值投资理论的人，是怎么接触到比特币的？我最开始接触股市的时候，其实试过做一阵子的日交易，每天都盯盘，赚快钱也输快钱，追求的就是一个刺激嘛，而且我自己是有着轻度的成瘾性人格的着迷，一个东西的时候就能没日没夜地一直研究。所以那阵子就是白天炒股票，晚上炒比特币。但是可能我没有超短线的天赋，收益率只能说是惨不忍睹。最多的时候比特币浮亏差不多有百分之六十、百分之七十了，还没有算上其中耗费的时间精力。这后来就放着装死了。真正又开始想起来比特币，是在今年一月份，看到对冲基金大佬推着众斯在采访里说，他虽然对比特币包括背后的区块链技术一窍不通，但是依然愿意把他百分之一的资产投入到比特币当中。因为他觉得现在世界上最看好比特币的大部分都是科技宅马农，这些人的智商普遍应该都是在金融人士之上的，所以他愿意follow the simple，跟着这一群人赌一把QQ这支对冲基金，我个人感情还是比较深的。所以觉得既然他的创始人做得这么成功，也毫不避讳的说自己就是在抄作业，我是不是也可以抄一下？说句题外话，也是我最近经常思考的一个问题，就是在过去三到四十年的时间内，投资界第一把交椅肯定是被巴菲特老爷爷占据的，而他的投资逻辑一向都是只投资自己认知范围之内的东西。它的地位加上影响力，每年又。都在老家召开股东大会，世界各地的价值投资者都像朝圣一样争相参加。所以久而久之，价值投资只买自己认知范围内的东西，在投资界似乎就成为了一种政治正确。但是这个政治正确的投资方法是不是就一定适合咱们每一个散户投资者？虽然现在获取信息的方式对比从前容易太多了，但是想要方方面面的了解一家企业的基本面还是太难太难了。而且现在我们所处在一个科技大爆炸的时代当中，潜力最大长是最好的，就还偏偏是那些你不太能搞懂的公司。巴菲特即使是错过了亚马逊，错过了特斯拉，可能依旧仍然可以达到一个比较不错的投资回报率。但是如果我要是没搭上特斯拉的这班车，这两年的投资回报率应该就大打折扣了。我这么说呢倒并不是说一点基本面禁止调查也不应该做，该做的还是要做，该了解的也还是要去聊。借即使达不到百分之九十了解的程度，了解个百分之六十、百分之七十也会增加你对这只股票的信心，信心越足，你能拿的时间也就越久。在今年听大家抱怨最多的就是这支股票又卖飞了，相信大家也都意识到了长期持有的力量。OK，话题扯得有点远了，回归到比特币的问题上，我觉得要想让我了解比特币背后的技术，感觉可能和九十年代初期的人第一次听到互联网时候的反应一样。互联网在那个时代，大部分人是完全想象不到它未来将会是一个什么样的存在的。如果你穿越回去和大家描述这个时代互联网对人们生活的改变，可能会被当成疯子。然后在九十年代后期，互联网公司开始逐渐受到追捧，泡沫越吹越大，终于破掉之后，肯定也会有相当一部分人告诉你，互联网就是一个巨大的泡沫。但是猜猜后来怎么样了？经过了长达十年的修整，所有人都被高科技吓破了胆的时候，互联网的浪潮又回来了，并且在过去十年当中创造出了全世界市值最大的几家公司。只能说是造化弄人，经历过互联网泡沫的那批前辈，以为学到了股市当中最宝贵的。也就是不再追逐自己搞不懂的前沿科技，但是同样的经验也可能让他们和饭公司擦身而过。对于比特币，虽然我搞不懂它背后的科技，但是还是可以简单地分析一下它的金融属性，从而了解它未来的升值潜力的。首先我最看重的是比特币逐渐被企业机构发掘，成为一种全新的资产类别。现在全世界已经比较主流的资产类别有股票、债券、货币、房地产、黄金。试想一下，如果你身价几十亿的话，对资产增值已经没有特别大的需求了，最想做的事情其实就是资产保值。二零二零年，美国M二货币发行量增加了百分之二十五，一年内美元指数下跌了百分之七。毫无疑问，我们即将进入一个超级通货膨胀时代，你名下的所有资产如果不能跑赢通胀，那就是在飞速贬值。咱们都应该听过世界第八大奇迹。复利公式吧。但是如果你名下的资产不能够做到有效管理，那就是见证世界第九大奇迹复复利公式的时候了。当然了，你可以说我投资股票、投资房地产，拿到高收益来跑赢通货膨胀不就行了？完全可以。但是投资这类传统资产都具有比较高的相关性。什么意思？就是碰到了类似去年三月份的黑天鹅事件的时候，所有资产会一起下跌。这也是为什么资产管理公司要想尽一切办法进行资产多元化，就是为了能够让a资产下跌的时候，b资产能够不受影响。虽然三月份的时候比特币也跟着下跌，但是从历史数据来看的话，比特币依旧是现有的所有资产类别当中和其他资产相关性最低的。然后你可能又会问了，就算比特币能够成为一种新兴的资产类别，那又会怎么样呢？举一个简单的例子，上一个大举被机构看上当作。呃新兴资产类别的就是房地产资产。在这之前，可能全世界的人都觉得房子是用来住的，而不是用来炒的。之后各种和房地产相关的金融衍生品也相继被开发出来，房子的价格也跟着水涨船高。川大总统的父亲应该就是当初在纽约搞房地产开发发了家。房地产浪潮席卷中国，比美国晚一些，大概就是在两千年之后了。不知道看我视频的观众朋友们有多少是本人或者是家里买卖房子发了家的。现在看到比特币两个多月价格翻了三倍，到达四万美金一个，你可能会觉得已经高的离谱了。但是咱们看一下，今天比特币的总市值差不多是七千多亿，和特斯拉的市值差不多。再来看一下其他资产类别的总市值，黄金是十万亿，房地产投资是九点六万亿，全球股市是四十一点二。六万亿，全球债市是一百三十万亿。
+对于比特币的目标价，JP Morgan在最近提升了自己的目标价到十四万一个。然后这个大哥觉得JP Morgan太保守了，比特币具有黄金所有的金融属性和货币属性，而且还能进行实时交易，所以他觉得未来价格应该能够达到一百万美金一个，现在比特币大概在四万美金一个的价格徘回，大家可以自行感受一下。二零二零年真的是美国股市当中最神奇的一年，起码是在我本人短暂的炒股生涯中见过的最有戏剧性的一年。三月份断崖式的大跌，到之后的一路走高再创新。哦与此同时呢，新冠肺炎的新增数量和死亡数量每天都还在不停的攀升。如果单看这张图的话，你可能很难区分出到底看的是股市还是新冠的走势图。前几天在网上看到有人调侃说，现在看新闻的话以为美国要灭国了，看股市又觉得到处一片欣欣向荣，完全是两种不同的画风。造成这个巨大反差的一大原因，应该就是今年美联储为了救市给出的无限量化宽松大法，俗称隐潜大法，印钱大把一出，所有的资产，包括股市、债市、房市都跟着水涨船高。当然了，也包括我们今天要聊的另外一个加引号的新型资产，比特币。在十月八号的时候出了一期视频，是关于方舟基金对于比特币的估值模型被骂得很惨。说我一个讲财经、讲股票基本面的博主，怎么开始鼓吹大家买比特币了？可以看到当时比特币的价格一个是一万零九百，到现在三个月的时间足足翻了三倍，特斯拉还没有这些药物，看到这个回报率也应该都要通通靠边站了。毫无疑问，属于比特币的新一轮大牛市已经开启了。价格在到达了之前二零一七年的历史高位，一万九千美金一个的时候，稍微遇到了一些阻力，然后就直接冲上去了。我自己是在比特币突破前高之后，各个账号里都少量加仓。当然了，我肯定也是预测不到它的价格能上涨的这么快，不然的话我应该是all in,而不只是少量加仓了。今天的视频主要是想继续聊一下我最近对比特币认知上的一些改变，也听一听我最喜欢的方舟基金牛股神candy对比特币的最新看法。首先说一下，我作为一个关注股票基本面普及、长线价值投资理论的人，是怎么接触到比特币的？我最开始接触股市的时候，其实试过做一阵子的日交易，每天都盯盘，赚快钱也输快钱，追求的就是一个刺激嘛，而且我自己是有着轻度的成瘾性人格的着迷，一个东西的时候就能没日没夜地一直研究。所以那阵子就是白天炒股票，晚上炒比特币。但是可能我没有超短线的天赋，收益率只能说是惨不忍睹。最多的时候比特币浮亏差不多有百分之六十、百分之七十了，还没有算上其中耗费的时间精力。这后来就放着装死了。真正又开始想起来比特币，是在今年一月份，看到对冲基金大佬推着众斯在采访里说，他虽然对比特币包括背后的区块链技术一窍不通，但是依然愿意把他百分之一的资产投入到比特币当中。因为他觉得现在世界上最看好比特币的大部分都是科技宅马农，这些人的智商普遍应该都是在金融人士之上的，所以他愿意follow the simple，跟着这一群人赌一把QQ这支对冲基金，我个人感情还是比较深的。所以觉得既然他的创始人做得这么成功，也毫不避讳的说自己就是在抄作业，我是不是也可以抄一下？说句题外话，也是我最近经常思考的一个问题，就是在过去三到四十年的时间内，投资界第一把交椅肯定是被巴菲特老爷爷占据的，而他的投资逻辑一向都是只投资自己认知范围之内的东西。它的地位加上影响力，每年又。都在老家召开股东大会，世界各地的价值投资者都像朝圣一样争相参加。所以久而久之，价值投资只买自己认知范围内的东西，在投资界似乎就成为了一种政治正确。但是这个政治正确的投资方法是不是就一定适合咱们每一个散户投资者？虽然现在获取信息的方式对比从前容易太多了，但是想要方方面面的了解一家企业的基本面还是太难太难了。而且现在我们所处在一个科技大爆炸的时代当中，潜力最大长是最好的，就还偏偏是那些你不太能搞懂的公司。巴菲特即使是错过了亚马逊，错过了特斯拉，可能依旧仍然可以达到一个比较不错的投资回报率。但是如果我要是没搭上特斯拉的这班车，这两年的投资回报率应该就大打折扣了。我这么说呢倒并不是说一点基本面禁止调查也不应该做，该做的还是要做，该了解的也还是要去聊。借即使达不到百分之九十了解的程度，了解个百分之六十、百分之七十也会增加你对这只股票的信心，信心越足，你能拿的时间也就越久。在今年听大家抱怨最多的就是这支股票又卖飞了，相信大家也都意识到了长期持有的力量。OK，话题扯得有点远了，回归到比特币的问题上，我觉得要想让我了解比特币背后的技术，感觉可能和九十年代初期的人第一次听到互联网时候的反应一样。互联网在那个时代，大部分人是完全想象不到它未来将会是一个什么样的存在的。如果你穿越回去和大家描述这个时代互联网对人们生活的改变，可能会被当成疯子。然后在九十年代后期，互联网公司开始逐渐受到追捧，泡沫越吹越大，终于破掉之后，肯定也会有相当一部分人告诉你，互联网就是一个巨大的泡沫。但是猜猜后来怎么样了？经过了长达十年的修整，所有人都被高科技吓破了胆的时候，互联网的浪潮又回来了，并且在过去十年当中创造出了全世界市值最大的几家公司。只能说是造化弄人，经历过互联网泡沫的那批前辈，以为学到了股市当中最宝贵的。也就是不再追逐自己搞不懂的前沿科技，但是同样的经验也可能让他们和饭公司擦身而过。对于比特币，虽然我搞不懂它背后的科技，但是还是可以简单地分析一下它的金融属性，从而了解它未来的升值潜力的。首先我最看重的是比特币逐渐被企业机构发掘，成为一种全新的资产类别。现在全世界已经比较主流的资产类别有股票、债券、货币、房地产、黄金。试想一下，如果你身价几十亿的话，对资产增值已经没有特别大的需求了，最想做的事情其实就是资产保值。二零二零年，美国M二货币发行量增加了百分之二十五，一年内美元指数下跌了百分之七。毫无疑问，我们即将进入一个超级通货膨胀时代，你名下的所有资产如果不能跑赢通胀，那就是在飞速贬值。咱们都应该听过世界第八大奇迹。复利公式吧。但是如果你名下的资产不能够做到有效管理，那就是见证世界第九大奇迹复复利公式的时候了。当然了，你可以说我投资股票、投资房地产，拿到高收益来跑赢通货膨胀不就行了？完全可以。但是投资这类传统资产都具有比较高的相关性。什么意思？就是碰到了类似去年三月份的黑天鹅事件的时候，所有资产会一起下跌。这也是为什么资产管理公司要想尽一切办法进行资产多元化，就是为了能够让a资产下跌的时候，b资产能够不受影响。虽然三月份的时候比特币也跟着下跌，但是从历史数据来看的话，比特币依旧是现有的所有资产类别当中和其他资产相关性最低的。然后你可能又会问了，就算比特币能够成为一种新兴的资产类别，那又会怎么样呢？举一个简单的例子，上一个大举被机构看上当作。呃新兴资产类别的就是房地产资产。在这之前，可能全世界的人都觉得房子是用来住的，而不是用来炒的。之后各种和房地产相关的金融衍生品也相继被开发出来，房子的价格也跟着水涨船高。川大总统的父亲应该就是当初在纽约搞房地产开发发了家。房地产浪潮席卷中国，比美国晚一些，大概就是在两千年之后了。不知道看我视频的观众朋友们有多少是本人或者是家里买卖房子发了家的。现在看到比特币两个多月价格翻了三倍，到达四万美金一个，你可能会觉得已经高的离谱了。但是咱们看一下，今天比特币的总市值差不多是七千多亿，和特斯拉的市值差不多。再来看一下其他资产类别的总市值，黄金是十万亿，房地产投资是九点六万亿，全球股市是四十一点二。六万亿，全球债市是一百三十万亿。
 
-所以假设比特币能够达到和黄金一样的市值，应该还要再涨十到十五倍。二、可在今年九月份发布的白皮书当中预测，比特币在二零二五年之前，市值应该能达到三万亿，价格在十四万美金一个。具体是怎么估值的，大家去可以看一下我上一期的视频，当时连我自己都感觉这个数字还是有点夸张的，但是现在的市值已经接近一万亿了，只能说这个世界变化太快。我自认为是一个接受新事物、接受变化能力比较强的人，都感觉有点跟不上节奏了。女武神K DVD，在他刚刚发布的in the nov，cto的视频当中没有提到任何个股，只提到了比特币，来看一下它是怎么说的。除了对比特币保持长期看多，我在这段视频当中得到了另外一个信息，就是女股神再一次给投资者们强调说，要做好二零二一年股市大回调甚至崩盘的心理准备。这个不是阴谋论，虽然咱们预测不了时间，预测不了回调力度，但是能做的就是减少仓位、控制风险，起码也能保持。一个良好的心理、态度，等到哪天大跌真的到来的时候，不至于被打一个猝不及防。到那个时候你一定会开始怀疑股市还能不能涨起来，美国是不是要亡国了？尤其其实在大熊市当中，想想经历了两千年互联网泡沫和零八、零九次贷危机的那些人熬了多少年，最后肯定是有百分之九十九的人对股市已经完全丧失信心了，但是美股依旧挺了过来。OK，做这期视频的目的呢并不是让你听完之后就立马熬印比特币了，最后要不要去投资比特币，还是要看你个人的风险承受能力和对新事物的接受能力了。不过不管买还是不买，我希望都是经过你自己深思熟虑过后的决定。不要今天听了我的视频之后，觉得我看多比特币，然后就跟风了，明天价格大跌百分之三十、百分之四十，或者听到哪个博主说比特币是大泡沫，是当代荷兰郁金香之后又下了。赶紧卖掉了。巴菲特也曾经质疑过，说比特币就是一场搏杀游戏。但是话说回来，巴菲特对比特币有真的了解吗？如果你入手了比特币的话，就一定要做好价格大幅波动的心理准备。他既然能够让你的投资两个月内翻倍，就同时也能让你的本金在一周之内缩水百分之五十。最后还是那句百说不厌的老话，投资最重要的还是要保持独立思考的能力，如果你还不能做到独立思考。
+所以假设比特币能够达到和黄金一样的市值，应该还要再涨十到十五倍。二、可在今年九月份发布的白皮书当中预测，比特币在二零二五年之前，市值应该能达到三万亿，价格在十四万美金一个。具体是怎么估值的，大家去可以看一下我上一期的视频，当时连我自己都感觉这个数字还是有点夸张的，但是现在的市值已经接近一万亿了，只能说这个世界变化太快。我自认为是一个接受新事物、接受变化能力比较强的人，都感觉有点跟不上节奏了。女股神，在他刚刚发布的in the nov，cto的视频当中没有提到任何个股，只提到了比特币，来看一下它是怎么说的。除了对比特币保持长期看多，我在这段视频当中得到了另外一个信息，就是女股神再一次给投资者们强调说，要做好二零二一年股市大回调甚至崩盘的心理准备。这个不是阴谋论，虽然咱们预测不了时间，预测不了回调力度，但是能做的就是减少仓位、控制风险，起码也能保持。一个良好的心理、态度，等到哪天大跌真的到来的时候，不至于被打一个猝不及防。到那个时候你一定会开始怀疑股市还能不能涨起来，美国是不是要亡国了？尤其其实在大熊市当中，想想经历了两千年互联网泡沫和零八、零九次贷危机的那些人熬了多少年，最后肯定是有百分之九十九的人对股市已经完全丧失信心了，但是美股依旧挺了过来。OK，做这期视频的目的呢并不是让你听完之后就立马熬印比特币了，最后要不要去投资比特币，还是要看你个人的风险承受能力和对新事物的接受能力了。不过不管买还是不买，我希望都是经过你自己深思熟虑过后的决定。不要今天听了我的视频之后，觉得我看多比特币，然后就跟风了，明天价格大跌百分之三十、百分之四十，或者听到哪个博主说比特币是大泡沫，是当代荷兰郁金香之后又下了。赶紧卖掉了。巴菲特也曾经质疑过，说比特币就是一场搏杀游戏。但是话说回来，巴菲特对比特币有真的了解吗？如果你入手了比特币的话，就一定要做好价格大幅波动的心理准备。他既然能够让你的投资两个月内翻倍，就同时也能让你的本金在一周之内缩水百分之五十。最后还是那句百说不厌的老话，投资最重要的还是要保持独立思考的能力，如果你还不能做到独立思考。
 
 来自北美韭菜日记
